<resources>

    <string name="app_name">Bounce</string>
    <string name="title_activity_main">Bounce</string>
    <string name="menu_exit">Exit</string>
    <string name="game_paused">Game Paused</string>
    <string name="quit">Quit</string>
    <string name="back_menu">Back to menu</string>
    <string name="resume">Resume</string>
    <string name="sure_quit">Are you sure you want to quit? Game progress will be lost!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="menu_settings">Settings</string>
    <string name="play">Play</string>
    <string name="sound">Sound</string>
    <string name="font">fonts/Minecraftia.ttf</string>
    <string name="sound_check_summary">Wheter the sound is active or not</string>
    <string name="sound_music">Sound and Music</string>
    <string name="prefs_file">com.fonserbc.bounce.prefs</string>
    <string name="prefs_soundOn">soundOn</string>
    <string name="prefs_musicOn">musicOn</string>
    <string name="prefs_difficulty">difficulty</string>
    <string name="prefs_soundSlider">sound_slider</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="music">Music</string>
    <string name="menu_howto">How to play</string>
    <string name="menu_ranking">Rankings</string>
    <string name="menu_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="menu_clear_ranking">Delete ranking data</string>
    <string name="sure_erase">Are you sure you want erase the Ranking data? This will reset any saved data from every difficulty!</string>
    <string name="error_erase">ERROR! Could not reset ranking</string>
    <string name="ok">Continue</string>
    <string name="error_name">Name can\'t be empty</string>
    <string name="nice_score">Nice score!</string>
    <string name="register_got">"You got "</string>
    <string name="points">" points!"</string>
    <string name="register_save">Save</string>
    <string name="register_enter">Enter your name</string>
    <string name="def_name">AAA</string>
    <string name="def_points">9001</string>
    <string name="about_made">This game has been made by Ferran Bertomeu Castells</string>
    <string name="about_twitter">Twitter \@fonserbc</string>

</resources>