<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_main"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/gray" >

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <TextView
	        android:id="@+id/main_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginBottom="@dimen/big_size"
	        android:layout_marginTop="@dimen/large_size"
	        android:text="@string/title_activity_main"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:textStyle="bold" />
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/main_title"
	        android:orientation="vertical" >
	
	        <Button
	            android:id="@+id/play"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_marginBottom="@dimen/small_size"
	            android:text="@string/play"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <Button
	            android:id="@+id/ranking_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:text="@string/menu_ranking"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        
	        <Button
	            android:id="@+id/howto_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:text="@string/menu_howto"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        
	        <Button
	            android:id="@+id/settings_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:text="@string/menu_settings"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	        
	        <Button
	            android:id="@+id/about_button"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_marginTop="@dimen/small_size"
	            android:text="@string/menu_about"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    </LinearLayout>
	</RelativeLayout>
</ScrollView>
