<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_main"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/gray" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/about_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginBottom="@dimen/small_size"
	        android:layout_marginTop="@dimen/small_size"
	        android:text="@string/menu_about"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	
	    <TextView
	        android:id="@+id/about_made"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/small_size"
	        android:layout_marginRight="@dimen/small_size"
	        android:text="@string/about_made"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textColor="@color/white" />
	
	    <TextView
	        android:id="@+id/about_twitter"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/small_size"
	        android:layout_marginTop="@dimen/small_size"
	        android:text="@string/about_twitter"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <ImageView
	        android:id="@+id/about_vgafib"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="@dimen/medium_size"
	        android:src="@drawable/vgafib" />
	
	</LinearLayout>
</ScrollView>
